final firebase version

--- a/public/index.html
+++ b/public/index.html
@@ -93,6 +93,10 @@
         Klicke auf Gegenstände, die du dir näher ansehen willst. Manchmal helfen dir auch die Icons unten am Bildschirm,
         um mehr zur Story oder Hinweise zu erfahren.
       </p>
+      <hr>
+      <p class="lead">
+        <i class="fab fa-github"></i> <a href="https://github.com/Rosti97/I3C-Game.git" style="color: whitesmoke;" target="_blank"> Hier geht's zum GitHub-Respo.</a>
+      </p>
     </div>
 
   </div>
